Added Header, Ending Game Logic, and Explosion Img

--- a/appinfo.json
+++ b/appinfo.json
@@ -10,6 +10,12 @@
     "resources": {
         "media": [
             {
+                "file": "images/explosion",
+                "name": "EXPLOSION_IMG",
+                "targetPlatforms": null,
+                "type": "bitmap"
+            },
+            {
                 "file": "images/Shuttle",
                 "name": "SHUTTLE",
                 "targetPlatforms": null,
